@@ -37,7 +37,14 @@
 
 /* pmkscan specific version */
 #define PREMAKE_SUBVER_PMKSCAN	"1"
-#define PMKSCAN_DATA	"data/pmkscan.dat" /* XXX TODO HARDCODE !!! */
+
+#ifdef USER_TEST
+#define PMK_DATADIR	"./data"
+#else
+#define PMK_DATADIR	DATADIR
+#endif
+
+#define PMKSCAN_DATA	PMK_DATADIR "/pmkscan.dat"
 #define PMKSCAN_OUTPUT	"pmkfile.scan"
 
 
